k8s-ingress/ingress-nginx.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: recreateyourself-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "www.recreateyourself.org"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_clear_headers "Server";
      more_clear_headers "X-Powered-By";
      more_set_headers "Content-Security-Policy: frame-ancestors 'self' *.recreateyourself.org;";
      more_set_headers "Permissions-Policy: accelerometer=(), camera=(), geolocation=(), gyroscope=(), magnetometer=(), microphone=(), payment=(), usb=()";
      more_set_headers "Referrer-Policy: same-origin";
      more_set_headers "X-Content-Type-Options: nosniff";
      more_set_headers "X-Frame-Options: DENY";
      more_set_headers "X-Xss-Protection: 1; mode=block";
    nginx.ingress.kubernetes.io/server-snippet: |
      gzip            on;
      gzip_vary       on;
      gzip_types      text/plain application/xml text/css application/javascript;
      gzip_min_length 1000;
spec:
  rules:
  - host: "www.recreateyourself.org"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: recreateyourself-client
            port:
              number: 80
